增加交互式界面

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "enquirer": "^2.4.1",
     "iconv-lite": "^0.6.3",
     "node-fetch": "^3.3.2",
     "unzipper": "^0.12.3"
