--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "enquirer": "^2.4.1",
     "iconv-lite": "^0.6.3",
+    "node-disk-info": "^1.3.0",
     "node-fetch": "^3.3.2",
     "unzipper": "^0.12.3"
   }
