--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "cli-table3": "^0.6.5",
     "enquirer": "^2.4.1",
     "iconv-lite": "^0.6.3",
     "node-disk-info": "^1.3.0",
